<resources xmlns:xliff="http://schemas.android.com/tools">
    <string name="app_name">"What To Watch "</string>
    <string name="title_activity_main_discovery">Movies</string>
    <string name="hello_world">Hello world!</string>

    <string name="action_settings">Settings</string>
    <string name="action_sort_by">Sort by</string>

    <string name="title_activity_movie_detail">Detail</string>
    <string name="vote_placeholder">Vote: <b>%s</b></string>
    <string name="most_popular_btn_label">Most popular</string>
    <string name="highest_rated_btn_label">Highest rated</string>
    <string name="favorites_btn_label">Favorites</string>
    <string name="action_filter">Filter</string>

    <string-array name="sort_by_options_array">
        <item>Highest rated</item>
        <item>Most popular</item>
    </string-array>


    <string name="format_vote_average">
         <xliff:g id="value">%1.1f</xliff:g> / 10
    </string>
    <string name="accessibility_desc_movie_poster_image">Movie poster image</string>
    <string name="mark_as_favorite">MARK AS FAVORITE</string>
    <string name="accessibility_desc_mark_as_fav">Make favorite</string>

</resources>
