<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="wrap_content"
    android:layout_height="wrap_content">

    <ImageView
        android:id="@+id/imageViewPoster"
        android:contentDescription="@string/accessibility_desc_movie_poster_image"
        android:layout_width="@dimen/movie_item_image_width"
        android:layout_height="@dimen/movie_item_image_height"
        android:adjustViewBounds="true"
        android:scaleType="fitCenter"
         />

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="@dimen/movie_item_bottom_banner_height"
        android:layout_alignBottom="@+id/imageViewPoster"
        android:layout_alignEnd="@+id/imageViewPoster"
        android:layout_alignParentLeft="true"
        android:layout_alignParentStart="true"
        android:layout_alignRight="@+id/imageViewPoster"
        android:alpha=".8"
        android:background="@color/color_primary"
        android:orientation="horizontal"
        android:weightSum="1">


        <ToggleButton
            android:id="@+id/iv_favorite"
            android:layout_width="32dp"
            android:layout_height="32dp"
            android:layout_gravity="center"
            style="@style/toggleButton" />


    </LinearLayout>


</RelativeLayout>